# systemd-lsp

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: example-with-errors.service
src/: diagnostics.rs
tests/: cli_tests.rs
